Correct report environment - create temp directory

--- a/report/main.tex
+++ b/report/main.tex
@@ -17,7 +17,7 @@
 
 \include{texContent/30_intro}
 
-\include{texContent/35_convention}
+%\include{texContent/35_convention}
 
 \include{texContent/40_cahier_des_charges}
 
@@ -32,7 +32,6 @@
 
 
 \newpage
-\cite{rm_L0}
 \bibliography{MCSE_lavage_voiture}{}
 \bibliographystyle{plain}
 
