--- a/report/texContent/01_first_page.tex
+++ b/report/texContent/01_first_page.tex
@@ -9,7 +9,7 @@
 		ME1 - Conception des Systèmes Embarqués
 		}\\ %Titre
 	\vspace{1cm}
-Document de conception système lavage voiture \\
+Document de conception Système de Lavage de Voiture \\
 
 	\large
 	\HRule \\[1.5cm] %vertical line
@@ -27,7 +27,7 @@ Document de conception système lavage voiture \\
 
 \begin{center}\large %School
 	\textsc{École Polytech de Nantes}\\
-	\textsc{Electronique et Technlogie Numérique}
+	\textsc{Electronique et Technologies Numériques}
 \end{center}
 
 \vspace{2cm}
@@ -35,7 +35,3 @@ Document de conception système lavage voiture \\
 \noindent
 Enseignant référent : Olivier Pasquier
 \vspace{2cm}
-
-\begin{abstract}
-Abstract
-\end{abstract}
