--- a/report/texContent/30_intro.tex
+++ b/report/texContent/30_intro.tex
@@ -1,9 +1,10 @@
 \vspace*{4cm}
 \section*{Résumé}
-La méthodologie de conception de systèmes électroniques est une discipline essentielle lorsqu'il s'agit, dans le cadre d'une future carrière d'ingénieur, de réaliser un produit répondant aux besoins d'un client. 
+La Méthodologie de Conception de Systèmes Electroniques est une discipline essentielle lorsqu'il s'agit, dans le cadre d'une future carrière d'ingénieur, de réaliser un produit répondant aux besoins d'un client. 
 Et ce domaine est d'autant plus indispensable dans un monde où les systèmes numériques sont de plus en plus complexes et leur conceptions demandent une bonne structuration et une réelle méthodologie. 
 Ce rapport s'inscrit dans la présentation d'une conception d'un système de lavage de voiture par l'utilisation d'une méthode précise, applicable dans un ensemble de secteurs d'activités comme l'automobile, le médical, l'aéronautique, maritime, que ce soit dans le civil ou le militaire.
-
+Il s'agit de concevoir un système simplifié de pilotage d'un portique de lavage de voiture. 
+Ainsi, et afin de simplifier l'exercice, on ne considère que le rouleau horizontal du portique.
 
 \newpage
 
