--- a/report/texContent/40_cahier_des_charges.tex
+++ b/report/texContent/40_cahier_des_charges.tex
@@ -1,5 +1,8 @@
 \section{Cahier des charges}
 
+Il s'agit de concevoir un système simplifié de pilotage d'un portique de lavage de voiture. 
+Ainsi, et afin de simplifier l'exercice, on ne considère que le rouleau horizontal du portique.
 
 \subsection{Contraintes du projet}
+
 
